integ-tests/tests/snapshots/de__missing_required.snap
---
source: integ-tests/tests/de.rs
expression: error
---
error[missing-field]: missing field 's'
  ┌─ missing_required:1:1
  │
1 │ os = 20
  │ ^^^^^^^ table with missing field


